[gd_scene load_steps=6 format=3 uid="uid://kgcdpyukdks5"]

[ext_resource type="Script" path="res://board_color_game/board_color_main.gd" id="1_vbcky"]
[ext_resource type="Script" path="res://board_color_game/BoardViewer.gd" id="2_uvhcv"]
[ext_resource type="PackedScene" uid="uid://bx8yi2v07g73q" path="res://board_color_game/ui/sidebar/SideBar.tscn" id="3_s0ufn"]
[ext_resource type="Script" path="res://board_color_game/BoardHolder.gd" id="4_txyyy"]
[ext_resource type="PackedScene" uid="uid://dnwy80el3tqyx" path="res://board_color_game/ui/score_tracker/ScoreTracker.tscn" id="5_cn36e"]

[node name="Main" type="Node2D"]
script = ExtResource("1_vbcky")
number_of_boards_per_group = 20
max_board_width = 20
max_board_height = 20
image_scale = 15
possible_colors = Array[Color]([Color(1, 0, 0, 1), Color(0, 1, 0, 1), Color(0, 0, 1, 1), Color(1, 0.67451, 1, 1), Color(0.309804, 0.584314, 0.435294, 1), Color(0.72549, 0.270588, 0.952941, 1), Color(0.133333, 0.572549, 0.690196, 1), Color(0.658824, 0.584314, 0.129412, 1), Color(0.854902, 0.458824, 0.215686, 1), Color(0.454902, 0.52549, 0.247059, 1), Color(0.52549, 0.517647, 0.396078, 1)])

[node name="PlayerList" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = -5

[node name="GameTick" type="Timer" parent="."]
wait_time = 0.819
one_shot = true

[node name="HistoryTick" type="Timer" parent="."]
wait_time = 0.05

[node name="BoardViewer" type="Node2D" parent="."]
position = Vector2(201, 300)
script = ExtResource("2_uvhcv")
x_step = 300
y_step = 300

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(472, 310)
zoom = Vector2(0.8, 0.8)

[node name="UI" type="CanvasLayer" parent="."]

[node name="SideBar" parent="UI" instance=ExtResource("3_s0ufn")]
offset_left = 11.0
offset_top = 184.0
offset_right = 270.0
offset_bottom = 534.0

[node name="MoveCounter" type="Label" parent="UI"]
offset_left = 18.0
offset_top = 79.0
offset_right = 77.0
offset_bottom = 102.0
text = "Moves: "

[node name="ScoreTracker" parent="UI" instance=ExtResource("5_cn36e")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -237.0
offset_right = 16.0
offset_bottom = -237.0
grow_vertical = 0

[node name="BoardHolder" type="Node2D" parent="."]
script = ExtResource("4_txyyy")
boards_per_row = 10

[node name="BoardQueueTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="GameTick" to="." method="_on_game_tick_timeout"]
[connection signal="timeout" from="HistoryTick" to="." method="_on_history_tick_timeout"]
[connection signal="child_entered_tree" from="BoardHolder" to="BoardHolder" method="_on_child_entered_tree"]
[connection signal="timeout" from="BoardQueueTimer" to="." method="_start_game_with_check"]
